ai chatbot updation

--- a/public/about.html
+++ b/public/about.html
@@ -246,5 +246,7 @@
       });
     }
   </script>
+    <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
+
 </body>
 </html>
