--- a/public/about1.html
+++ b/public/about1.html
@@ -166,5 +166,8 @@
     <a href="mainpage.html" class="cta-button">Start Exploring AI Tools</a>
   </section>
 
+    <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
+
+
 </body>
 </html>
