--- a/public/contact.html
+++ b/public/contact.html
@@ -89,5 +89,8 @@
   <footer>
     Proudly built by the MIC AI Team
   </footer>
+
+    <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
+
 </body>
 </html>
