--- a/public/login.html
+++ b/public/login.html
@@ -133,5 +133,7 @@
       togglePassword.textContent = type === "password" ? "👁️" : "🙈";
     });
   </script>
+    <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
+
 </body>
 </html>
