--- a/public/mainpage.html
+++ b/public/mainpage.html
@@ -199,5 +199,7 @@
     </main>
 
     <script src="mainpage.js"></script>
+      <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
+
 </body>
 </html>
