--- a/public/settings.html
+++ b/public/settings.html
@@ -118,5 +118,7 @@
 
     loadHistory();
   </script>
+    <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
+
 </body>
 </html>
