--- a/public/signup.html
+++ b/public/signup.html
@@ -193,5 +193,7 @@
       else strengthFill.style.background = "green";
     });
   </script>
+    <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
+
 </body>
 </html>
