--- a/public/terms.html
+++ b/public/terms.html
@@ -121,5 +121,7 @@
   <footer>
     Proudly built by the AI Team
   </footer>
+    <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
+
 </body>
 </html>
