--- a/public/profile.html
+++ b/public/profile.html
@@ -54,5 +54,8 @@
             }
         });
     </script>
+
+      <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
+
 </body>
 </html>
