--- a/public/success.html
+++ b/public/success.html
@@ -54,5 +54,7 @@
       window.location.href = "mainpage.html"; // change to your homepage file
     });
   </script>
+    <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
+
 </body>
 </html>
