--- a/public/mainpage.html
+++ b/public/mainpage.html
@@ -43,7 +43,7 @@
                 <li>Developer Tools</li>
                 <li>Marketing</li>
                 <li>Robotics</li>
-                 <li>other</li>
+                <li>Other</li>
             </ul>
         </nav>
     </aside>
@@ -98,104 +98,7 @@
 
     <!-- AI Tools Section -->
     <main class="tools-section">
-        <!-- Tool Box: Keyword Extractor (Verified) -->
-        <div class="tool-box comic-outline" data-tool="Keyword Extractor" data-verified="true">
-            <div class="tool-image-placeholder"></div>
-            <div class="tool-info">
-                <div class="tool-header">
-                    <span class="tool-name">Keyword Extractor</span>
-                    <span class="verified-badge" title="Verified">
-                        <svg width="20" height="20" viewBox="0 0 20 20">
-                            <circle cx="10" cy="10" r="9" fill="#fff" stroke="#111" stroke-width="2"/>
-                            <path d="M6 11l3 3 5-6" stroke="#16c784" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </span>
-                </div>
-                <p class="tool-desc">Extract keywords instantly.</p>
-            </div>
-            <div class="tool-actions">
-                <button class="try-btn comic-outline">Try Now</button>
-                <button class="desc-btn comic-outline">Description</button>
-            </div>
-            <span class="favorite-heart" data-tool="Keyword Extractor" title="Favorite">
-                <svg width="22" height="22" viewBox="0 0 22 22">
-                    <path d="M11 18s-7-4.5-7-9a5 5 0 0 1 9-3 5 5 0 0 1 9 3c0 4.5-7 9-7 9z"
-                        fill="none" stroke="#253a7d" stroke-width="2"/>
-                </svg>
-            </span>
-        </div>
-        <!-- Tool Box: Headline Generator (Verified) -->
-        <div class="tool-box comic-outline" data-tool="Headline Generator" data-verified="true">
-            <div class="tool-image-placeholder"></div>
-            <div class="tool-info">
-                <div class="tool-header">
-                    <span class="tool-name">Headline Generator</span>
-                    <span class="verified-badge" title="Verified">
-                        <svg width="20" height="20" viewBox="0 0 20 20">
-                            <circle cx="10" cy="10" r="9" fill="#fff" stroke="#111" stroke-width="2"/>
-                            <path d="M6 11l3 3 5-6" stroke="#16c784" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </span>
-                </div>
-                <p class="tool-desc">Catchy headlines.</p>
-            </div>
-            <div class="tool-actions">
-                <button class="try-btn comic-outline">Try Now</button>
-                <button class="desc-btn comic-outline">Description</button>
-            </div>
-            <span class="favorite-heart" data-tool="Headline Generator" title="Favorite">
-                <svg width="22" height="22" viewBox="0 0 22 22">
-                    <path d="M11 18s-7-4.5-7-9a5 5 0 0 1 9-3 5 5 0 0 1 9 3c0 4.5-7 9-7 9z"
-                        fill="none" stroke="#253a7d" stroke-width="2"/>
-                </svg>
-            </span>
-        </div>
-        <!-- Tool Box: Text Summarizer (Verified) -->
-        <div class="tool-box comic-outline" data-tool="Text Summarizer" data-verified="true">
-            <div class="tool-image-placeholder"></div>
-            <div class="tool-info">
-                <div class="tool-header">
-                    <span class="tool-name">Text Summarizer</span>
-                    <span class="verified-badge" title="Verified">
-                        <svg width="20" height="20" viewBox="0 0 20 20">
-                            <circle cx="10" cy="10" r="9" fill="#fff" stroke="#111" stroke-width="2"/>
-                            <path d="M6 11l3 3 5-6" stroke="#16c784" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </span>
-                </div>
-                <p class="tool-desc">Short summaries.</p>
-            </div>
-            <div class="tool-actions">
-                <button class="try-btn comic-outline">Try Now</button>
-                <button class="desc-btn comic-outline">Description</button>
-            </div>
-            <span class="favorite-heart" data-tool="Text Summarizer" title="Favorite">
-                <svg width="22" height="22" viewBox="0 0 22 22">
-                    <path d="M11 18s-7-4.5-7-9a5 5 0 0 1 9-3 5 5 0 0 1 9 3c0 4.5-7 9-7 9z"
-                        fill="none" stroke="#253a7d" stroke-width="2"/>
-                </svg>
-            </span>
-        </div>
-        <!-- Tool Box: Text Classification (Unverified) -->
-        <div class="tool-box comic-outline" data-tool="Text Classification" data-verified="false">
-            <div class="tool-image-placeholder"></div>
-            <div class="tool-info">
-                <div class="tool-header">
-                    <span class="tool-name">Text Classification</span>
-                </div>
-                <p class="tool-desc">Categorize text automatically.</p>
-            </div>
-            <div class="tool-actions">
-                <button class="try-btn comic-outline">Try Now</button>
-                <button class="desc-btn comic-outline">Description</button>
-            </div>
-            <span class="favorite-heart" data-tool="Text Classification" title="Favorite">
-                <svg width="22" height="22" viewBox="0 0 22 22">
-                    <path d="M11 18s-7-4.5-7-9a5 5 0 0 1 9-3 5 5 0 0 1 9 3c0 4.5-7 9-7 9z"
-                        fill="none" stroke="#253a7d" stroke-width="2"/>
-                </svg>
-            </span>
-        </div>
+        <!-- Toolboxes will be dynamically added here -->
     </main>
 
     <script src="mainpage.js"></script>
