--- a/public/success.html
+++ b/public/success.html
@@ -21,10 +21,14 @@
       border-radius: 12px;
       text-align: center;
       box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-      max-width: 400px;
+      max-width: 420px;
     }
     h1 {
       margin-bottom: 20px;
+    }
+    p {
+      font-size: 16px;
+      line-height: 1.5;
     }
     button {
       margin-top: 20px;
@@ -44,17 +48,19 @@
 <body>
   <div class="box">
     <h1>✅ Tool Submitted!</h1>
-    <p>Your tool has been sent for verification.<br>
-    It will be reviewed within <b>72 hours</b>.</p>
+    <p>
+      Your tool has been successfully submitted and will now go through our 
+      <b>verification process</b>.  
+      Once verified, it will be <b>released on AI MART</b> and visible to users.
+    </p>
     <button id="goHome">Go to Home</button>
   </div>
 
   <script>
     document.getElementById("goHome").addEventListener("click", () => {
-      window.location.href = "mainpage.html"; // change to your homepage file
+      window.location.href = "mainpage.html"; // change if needed
     });
   </script>
-    <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
-
+  <script src="//code.tidio.co/xigsab6mvli76gywosypy18fzzbgmy79.js" async></script>
 </body>
 </html>
